# auto-mazur

./: .gitignore  README.md  SCALING.md  config.yaml  pyproject.toml
flake/: env.sh.example  flake.nix  mazur-service.nix  plan.md
src/: __init__.py  __main__.py  audit.py  config.py  consolidation.py  db.py  gateway.py  health.py  llm.py  models.py  store.py  tools.py  workspace.py
src/characters/: __init__.py  executive.py  reflector.py  summarizer.py  worker.py
src/context/: __init__.py  executive.py  reflector.py  worker.py
src/loop/: __init__.py  actions.py  executive.py  main.py  session.py  turn_guard.py
src/souls/: executive.md  reflector.md  summarizer-checkpoint.md  summarizer-compress.md  summarizer-journal.md  summarizer-weekly.md  worker.md
