[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-mazur"
version = "0.1.0"
description = "Autonomous LLM agent loop with hierarchical memory"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
auto-mazur = "src.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["souls/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
